# kitsune

./: .gitignore  README.md  config.yaml  main.py  mainbank.json  pyproject.toml  requirements.txt  test.py
cogs/: errors.py  fun.py  helpful.py  moderation.py  reddit.py  utils.py
cogs/economy/: economy.py
cogs/error/: errorHandler.py
cogs/fun/: eightball.py  ttt.py
cogs/mod/: ban.py  kick.py  mute.py  purge.py  slowmode.py  tempmute.py  unmute.py  warn.py
cogs/reddit/: aww.py  gaming.py  meme.py
cogs/utilities/: credits.py  embeds.py  help.py  mistake.py  owner.py  ping.py  serverinfo.py  setprefix.py  userinfo.py
database/: database.db
database/setup/: __init__.py  build.sql
error_hanndler/: error_handler.py  error_handler_clean.py
static/: latest_news.txt
utils/: checks.py  custom_context.py  errors.py  useful.py
