[tool.poetry]
name = "repl_python3_CluelessFrightenedBlogclient"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.0.1"
utils = "^1.0.1"
asyncpg = "^0.21.0"
ping3 = "^2.6.6"
dataio = "^0.0.5"
dblpy = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
